@@ -81,6 +81,9 @@
     <a target="_blank" href="https://trac.cyberduck.io/milestone/8.6.2"><strong>Version 8.6.2</strong></a>
 </p>
 <ul>
+    <li><span class="label label-success">Feature</span> Allow to open connections without copying authentication code
+        after login (Microsoft OneDrive, Sharepoint)
+    </li>
     <li><span class="label label-warning">Bugfix</span> Segmented downloads with multiple connections per file causes
         transfers to fail (<a
                 target="_blank" href="https://trac.cyberduck.io/ticket/13374">#13374</a>)
@@ -111,6 +114,8 @@
     <li><span class="label label-warning">Bugfix</span> Should not attempt to read metadata of existing files with no
         --preserve flag passed (CLI) (<a
                 target="_blank" href="https://trac.cyberduck.io/ticket/14802">#14802</a>)
+    </li>
+    <li><span class="label label-warning">Bugfix</span> Resolve tilde prefix in default path to home directory (SFTP)
     </li>
 </ul>
 
