@@ -2,6 +2,7 @@ Cyberduck
 https://cyberduck.io/
 
 8.6.2
+- [Feature] Allow to open connections without copying authentication code after login (Microsoft OneDrive, Sharepoint)
 - [Bugfix] Segmented downloads with multiple connections per file causes transfers to fail (#13374)
 - [Bugfix] Use recommended part size from authorization response for large file uploads (Backblaze B2) (#14856)
 - [Bugfix] Skip determining if directory only contains hidden files (Backblaze B2) (#14775)
@@ -10,6 +11,7 @@ https://cyberduck.io/
 - [Bugfix] Copy or move files between containers (Azure) (#14826)
 - [Bugfix] Upload with glob pattern including folders for local source has wrong target on server (CLI) (#14800)
 - [Bugfix] Should not attempt to read metadata of existing files with no --preserve flag passed (CLI) (#14802)
+- [Bugfix] Resolve tilde prefix in default path to home directory (SFTP)
 
 8.6.1
 - [Bugfix] Parse seconds or milliseconds from Mtime in metadata (S3)
